Add project #2: Number guessing game

--- a/00-assets/style.css
+++ b/00-assets/style.css
@@ -97,6 +97,7 @@ main .project-item img {
 }
 
 main .project-item figcaption {
+  min-height: 7rem;
   background: #f2f2f2;
   color: #020024;
   padding: 1rem;
