--- a/02-number-guessing-game/style.css
+++ b/02-number-guessing-game/style.css
@@ -30,39 +30,49 @@ ul {
 }
 
 a {
-  color: #333;
+  color: var(--font-color);
   text-decoration: none;
 }
 
 /*
-=========
- Nav bar
-=========
+==========
+ Nav bars
+==========
 */
 
 nav {
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-  background: #f2f2f2;
+  background: var(--background-color);
   height: 3rem;
-  display: grid;
   align-items: center;
-  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
+  padding: 1rem;
 }
 
-header nav ul {
-  display: flex;
-  justify-content: space-around;
-}
-
-header nav li {
-  color: #333;
+nav li {
+  color: var(--font-color);
   font-size: 1rem;
   font-weight: 700;
   margin-right: 1rem;
 }
 
-header nav li a:hover {
+nav li a:hover {
   opacity: 0.8;
+}
+
+header nav ul {
+  display: flex;
+  justify-content: flex-end;
+}
+
+footer nav {
+  display: flex;
+  flex-direction: column;
+}
+
+footer nav .about,
+footer nav .social {
+  display: flex;
+  padding-bottom: 0.8rem;
 }
 
 /*
@@ -176,33 +186,19 @@ main .player-info .stats button {
 
 /*
 =========
- Footer
+ Media
 =========
 */
 
-footer nav {
-  display: flex;
-  justify-content: space-around;
-  padding: 0 2rem;
-}
-
-footer nav .footer-left,
-footer nav .footer-right {
-  display: flex;
-}
-
-footer nav li {
-  color: #333;
-  font-size: 1rem;
-  font-weight: 700;
-  margin-right: 1rem;
-}
-
-footer nav li a:hover {
-  opacity: 0.7;
-}
-
 @media screen and (max-width: 800px) {
+  body {
+    padding: 0 1rem;
+  }
+
+  nav {
+    padding: 1rem 0;
+  }
+
   main .hero h1 {
     font-size: 2rem;
     padding-top: 1rem;
