--- a/00-assets/starter/assets/style.css
+++ b/00-assets/starter/assets/style.css
@@ -1,4 +1,5 @@
 :root {
+  --font: ;
   --font-color: ;
   --background-color: ;
 }
@@ -12,11 +13,16 @@
 body {
   /* Set 1rem = 10px */
   font-size: 62.5%;
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-family: var(--font);
   background: var(--background-color);
+  background: url(images/background.jpg);
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
   color: var(--font-color);
   line-height: 1.5;
-  padding: 0 2rem;
+  padding: 0 1rem;
+  height: 100vh;
 }
 
 ul {
@@ -24,6 +30,7 @@ ul {
 }
 
 a {
+  font-size: 1rem;
   color: var(--font-color);
   text-decoration: none;
 }
@@ -34,19 +41,20 @@ p {
   text-align: center;
   letter-spacing: 0.1rem;
   line-height: 1;
-  padding-bottom: 2rem;
 }
 
 h1 {
-  font-size: 3rem;
+  font-size: 2.5rem;
+  padding-bottom: 1rem;
 }
 
 h2 {
-  font-size: 2.5rem;
+  font-size: 2rem;
+  padding-bottom: 2rem;
 }
 
 p {
-  font-size: 1.6rem;
+  font-size: 1.2rem;
 }
 
 /*
@@ -76,7 +84,7 @@ nav {
   background: var(--background-color);
   height: 3rem;
   align-items: center;
-  padding: 1rem;
+  padding: 1rem 0;
 }
 
 nav li {
@@ -112,26 +120,26 @@ footer nav .social {
 =========
 */
 
-@media screen and (max-width: 900px) {
+@media screen and (min-width: 900px) {
   body {
-    padding: 0 1rem;
+    padding: 0 2rem;
   }
 
   nav {
-    padding: 1rem 0;
+    padding: 1rem;
   }
-}
 
-@media screen and (max-width: 600px) {
   h1 {
-    font-size: 2.5rem;
+    font-size: 3rem;
+    padding-bottom: 1rem;
   }
 
   h2 {
-    font-size: 2rem;
+    font-size: 2.5rem;
+    padding-bottom: 2rem;
   }
 
   p {
-    font-size: 1.5rem;
+    font-size: 1.6rem;
   }
 }
