--- a/00-assets/starter/assets/style.css
+++ b/00-assets/starter/assets/style.css
@@ -64,7 +64,7 @@ p {
 */
 
 main {
-  min-height: calc(100vh - 6rem);
+  min-height: calc(100vh - 9rem);
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -104,6 +104,7 @@ header nav ul {
 }
 
 footer nav {
+  height: 6rem;
   display: flex;
   flex-direction: column;
 }
