Update starter files

--- a/00-assets/style.css
+++ b/00-assets/style.css
@@ -73,9 +73,9 @@ main section {
 
 main .project-list {
   width: 90vw;
-  max-width: 1170px;
+  max-width: 117rem;
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
   grid-gap: 1.5rem;
 }
 
