--- a/00-assets/style.css
+++ b/00-assets/style.css
@@ -75,8 +75,9 @@ main .project-list {
   width: 80vw;
   max-width: 120rem;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
-  /* grid-auto-rows: 30rem; */
+  /* grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr)); */
+  grid-template-columns: repeat(auto-fit, minmax(min(25rem, 100%), 1fr));
+  /* grid-auto-rows: 28rem; */
   grid-gap: 2rem;
 }
 
@@ -94,7 +95,7 @@ main .project-item a:hover figure {
 
 main .project-item img {
   display: block;
-  object-fit: fit;
+  object-fit: cover;
   width: 100%;
   height: 100%;
 }
@@ -176,13 +177,13 @@ footer nav .social a {
     justify-content: space-between;
     padding: 0 1rem;
   }
-
-  main .project-list {
-    width: 90vw;
-  }
 }
 
 @media screen and (max-width: 600px) {
+  main .project-list {
+    width: 90vw;
+  }
+
   h1 {
     font-size: 2.5rem;
   }
