--- a/03-sliding-sign-up-login-form/assets/style.css
+++ b/03-sliding-sign-up-login-form/assets/style.css
@@ -116,25 +116,22 @@ main .container {
 
 main .form-container {
   position: absolute;
-  top: 0;
+  left: 0;
   /* push login & signup containers to top */
   height: 100%;
   transition: all 0.6s ease-in-out;
   /* smooth transform translate X transitions */
 }
 
-main .login-container,
-main .signup-container {
-  height: 50%;
-}
-
 main .login-container {
-  left: 0;
+  top: 0;
+  height: 50%;
   z-index: 2;
 }
 
 main .signup-container {
-  left: 0;
+  top: 0;
+  height: 50%;
   opacity: 0;
   z-index: 1;
 }
@@ -194,6 +191,7 @@ main .overlay-container button.transparent {
 /*  Display visible area (hide panel which is overflow/ out of boundary) */
 main .overlay-container {
   position: absolute;
+  left: 0;
   top: 50%;
   width: 100%;
   height: 50%;
@@ -208,7 +206,7 @@ main .overlay-container .overlay {
   width: 100%;
   height: 200%;
   /* take full height of overlay-container: 200% * 50% = 100% */
-  top: 0;
+  top: -100%;
 
   background: var(--login-overlay);
   background: linear-gradient(to bottom, #f77f00, #d62828);
@@ -224,7 +222,7 @@ main .overlay-container .overlay {
 /* Holds actual content */
 main .overlay-container .overlay .overlay-panel {
   position: absolute;
-  top: 0;
+  left: 0;
   height: 50%;
   width: 100%;
 
@@ -237,15 +235,16 @@ main .overlay-container .overlay .overlay-panel {
   transition: transform 0.6s ease-in-out;
 }
 
+/* Login overlay */
+.overlay-left {
+  transform: translateY(20%);
+}
+
+/* Sign up overlay */
 /* hides content from view */
 .overlay-right {
   transform: translateY(0);
-}
-
-.overlay-left {
-  transform: translateY(20%);
   bottom: 0;
-  opacity: 0;
 }
 
 /*
@@ -253,15 +252,9 @@ main .overlay-container .overlay .overlay-panel {
 SLIDING ANIMATION
 ===================
 */
-/* When signUpButton clicked, .login-container moves to the bottom */
+/* When signUpButton clicked, .login-container moves up & out of view */
 .container.right-panel-active .login-container {
   transform: translateY(-100%);
-  opacity: 0;
-}
-
-/* Moves .overlay-container to the top */
-.container.right-panel-active .overlay-container {
-  transform: translateY(100%);
 }
 
 /* Show sign up form on the bottom (on top of login form)*/
@@ -269,20 +262,25 @@ SLIDING ANIMATION
   transform: translateY(100%);
   opacity: 1;
   z-index: 5;
+  animation: show 0.6s;
 }
 
-/* Slide .overlay-left to top */
+/* Moves .overlay-container to the top */
+.container.right-panel-active .overlay-container {
+  transform: translateY(-100%);
+}
+
+/* Slide login overlay to top */
 .container.right-panel-active .overlay {
-  transform: translateY(-50%);
+  transform: translateY(50%);
 }
 
-/* Text slide in from top */
+/* Login overlay text slide in from top */
 .container.right-panel-active .overlay-left {
-  transform: translateY(0);
-  opacity: 1;
+  transform: translateY(-20%);
 }
 
-/* Text slide in from bottom */
+/* Sign up overlay text slide in from bottom */
 .container.right-panel-active .overlay-right {
   transform: translateY(20%);
 }
@@ -338,7 +336,11 @@ footer nav .social {
   main .container {
     width: 60rem;
     max-width: 100%;
-    height: 40rem;
+    height: 35rem;
+  }
+
+  h1 {
+    padding-bottom: 5rem;
   }
 
   main .login-container,
@@ -398,12 +400,14 @@ footer nav .social {
     transition: transform 0.6s ease-in-out;
   }
 
+  /* Sign up overlay */
   /* hides content from view */
   .overlay-right {
     /* right: 0; */
     transform: translateX(0);
   }
 
+  /* Login overlay */
   .overlay-left {
     transform: translateX(-20%);
     right: 0;
