--- a/03-sliding-sign-up-login-form/assets/style.css
+++ b/03-sliding-sign-up-login-form/assets/style.css
@@ -32,7 +32,7 @@ ul {
 a {
   color: var(--font-color);
   text-decoration: none;
-  font-size: 1rem;
+  font-size: 0.8rem;
 }
 
 h1,
@@ -43,19 +43,20 @@ p {
 }
 
 h1 {
-  font-size: 3rem;
+  font-size: 1.5rem;
   letter-spacing: 0.05rem;
   padding-bottom: 2rem;
 }
 
 h2 {
-  font-size: 2.5rem;
+  font-size: 1.8rem;
   letter-spacing: 0.05rem;
 }
 
 p {
-  font-size: 1rem;
-  letter-spacing: 0;
+  font-size: 0.8rem;
+  font-weight: 600;
+  letter-spacing: 0.01rem;
 }
 
 button {
@@ -69,7 +70,7 @@ button {
   border: 1px solid #d62828;
   border-radius: 2rem;
   padding: 0.5rem 1rem;
-  margin-top: 1.5rem;
+  margin-top: 1.2rem;
   transition: transform 80ms ease-in;
 }
 
@@ -99,12 +100,12 @@ main {
   justify-content: center;
   align-items: center;
   flex-grow: 1;
-  padding: 2.5rem 0;
+  padding: 1rem 0;
 }
 
 main .container {
   position: relative;
-  height: 60rem;
+  height: 40rem;
   max-height: 100%;
   min-width: 20rem;
 
@@ -151,14 +152,14 @@ main .form-container form {
 }
 
 main .form-container form .social-container {
-  margin: 1.5rem 0;
+  margin: 1rem 0;
 }
 
 main .form-container form .social-container a {
   border: 1px solid #ddd;
   border-radius: 50%;
-  height: 3rem;
-  width: 3rem;
+  height: 1rem;
+  width: 1rem;
   display: inline-flex;
   align-items: center;
   justify-content: center;
@@ -167,14 +168,15 @@ main .form-container form .social-container a {
 }
 
 main .form-container form p {
-  margin-bottom: 1rem;
+  margin-bottom: 0.5rem;
 }
 
 main .form-container form input {
+  font-family: var(--font);
   background: #eee;
   border: none;
   padding: 0.5rem 1rem;
-  margin: 0.5rem 0;
+  margin: 0.3rem 0;
   width: 100%;
 }
 
@@ -333,6 +335,10 @@ footer nav .social {
 */
 
 @media screen and (min-width: 1100px) {
+  main {
+    padding: 2.5rem 0;
+  }
+
   main .container {
     width: 60rem;
     max-width: 100%;
@@ -340,7 +346,20 @@ footer nav .social {
   }
 
   h1 {
+    font-size: 3rem;
     padding-bottom: 5rem;
+  }
+
+  h2 {
+    font-size: 2.5rem;
+  }
+
+  a {
+    font-size: 1rem;
+  }
+
+  button {
+    margin-top: 1.5rem;
   }
 
   main .login-container,
@@ -349,8 +368,22 @@ footer nav .social {
     width: 50%;
   }
 
+  main .form-container form .social-container {
+    margin: 1.5rem 0;
+  }
+
+  main .form-container form .social-container a {
+    height: 3rem;
+    width: 3rem;
+  }
+
+  main .form-container form p {
+    margin-bottom: 1rem;
+  }
+
   main .form-container form input {
     width: 80%;
+    margin: 0.5rem 0;
   }
 
   /* Display visible area by hiding panel which is overflow/ out of boundary */
@@ -464,29 +497,5 @@ footer nav .social {
   /* Move text slide in from right */
   .container.right-panel-active .overlay-right {
     transform: translateX(20%);
-  }
-}
-
-@media screen and (max-width: 900px) {
-  body {
-    padding: 0 1rem;
-  }
-
-  nav {
-    padding: 1rem 0;
-  }
-}
-
-@media screen and (max-width: 600px) {
-  h1 {
-    font-size: 2.5rem;
-  }
-
-  h2 {
-    font-size: 2rem;
-  }
-
-  p {
-    font-size: 1.5rem;
   }
 }
