--- a/00-assets/style.css
+++ b/00-assets/style.css
@@ -75,9 +75,8 @@ main .project-list {
   width: 80vw;
   max-width: 120rem;
   display: grid;
-  /* grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr)); */
-  grid-template-columns: repeat(auto-fit, minmax(min(25rem, 100%), 1fr));
-  /* grid-auto-rows: 28rem; */
+  grid-template-columns: repeat(auto-fit, minmax(min(23rem, 100%), 1fr));
+  grid-template-rows: repeat(auto-fill, minmax(min(20rem, 100%), 1fr));
   grid-gap: 2rem;
 }
 
@@ -101,7 +100,7 @@ main .project-item img {
 }
 
 main .project-item figcaption {
-  min-height: 7rem;
+  /* min-height: 7rem; */
   background: #f2f2f2;
   color: #020024;
   padding: 1rem;
@@ -148,7 +147,7 @@ nav li a:hover {
 header nav {
   align-items: center;
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
 }
 
 header nav ul {
@@ -175,7 +174,21 @@ footer nav .social a {
 @media screen and (max-width: 900px) {
   nav {
     justify-content: space-between;
+    padding: 1rem 0 2rem;
+  }
+
+  main {
     padding: 0 1rem;
+  }
+
+  main section {
+    padding: 0;
+    margin-bottom: 1.5rem;
+  }
+
+  main .project-list {
+    grid-template-columns: repeat(auto-fit, minmax(min(18rem, 100%), 1fr));
+    grid-template-rows: repeat(auto-fill, minmax(min(8rem, 100%), 1fr));
   }
 }
 
@@ -185,18 +198,16 @@ footer nav .social a {
   }
 
   h1 {
-    font-size: 2.5rem;
-  }
-
-  h2 {
     font-size: 2rem;
   }
 
-  p {
-    font-size: 1.5rem;
+  h2 {
+    font-size: 1.8rem;
   }
 
-  nav {
+  p {
+    font-size: 1.3rem;
+    line-height: 1.2;
     padding: 0;
   }
 
