--- a/09-workout-mapper/assets/style.css
+++ b/09-workout-mapper/assets/style.css
@@ -4,6 +4,8 @@
   --font: "Ubuntu", sans-serif;
   --font-color: #afffcb;
   --background-color: #264653;
+  --running-color: #ffb545;
+  --cycling-color: #00c46a;
 }
 
 * {
@@ -16,7 +18,6 @@ body {
   /* Set 1rem = 10px */
   font-size: 62.5%;
   font-family: var(--font);
-  background: var(--background-color);
   color: var(--font-color);
   line-height: 1.5;
   padding: 0 1rem;
@@ -62,13 +63,153 @@ p {
 */
 
 main {
-  min-height: calc(100vh - 9rem);
+  min-height: calc(100vh - 11rem);
   display: flex;
-  /* flex-direction: column; */
   justify-content: center;
-  align-items: center;
+  align-items: flex-start;
   flex-grow: 1;
-  padding: 4.5rem 0;
+  padding: 2rem 0;
+  background: rgba(255, 255, 255, 0.8);
+}
+
+section.sidebar {
+  background: var(--background-color);
+  padding: 0 2rem;
+  display: grid;
+  grid-template-rows: auto 1fr auto;
+  height: calc(100vh - 7rem);
+}
+
+section.sidebar h1 {
+  margin-top: 2rem;
+}
+
+.form {
+  background: rgba(0, 0, 0, 0.3);
+  border-radius: 0.5rem;
+  margin: 1rem 0;
+  padding: 2rem;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 0.5rem 1.5rem;
+  transition: all 0.5s, transform 1ms;
+}
+
+.form .form-row {
+  font-size: 1rem;
+  display: flex;
+  align-items: center;
+}
+
+.form.hidden {
+  opacity: 0;
+  transform: translateY(-30rem);
+  height: 0;
+}
+
+.form-row.form-row_hidden {
+  display: none;
+}
+
+.form .form-row label {
+  flex-basis: 50%;
+}
+
+.form .form-row input,
+.form .form-row select {
+  background: rgba(255, 255, 255, 0.8);
+  border-radius: 0.2rem;
+  border: none;
+  padding: 0.3rem;
+  color: rgba(0, 0, 0, 0.644);
+  font-family: var(--font);
+  width: 60%;
+}
+
+.form button {
+  grid-column: 1 / -1;
+  justify-self: center;
+  margin-top: 1.5rem;
+  padding: 0.3rem 0.8rem;
+  font-family: var(--font);
+  font-weight: 700;
+  background-color: var(--font-color);
+  border: none;
+  border-radius: 0.2rem;
+}
+
+.form button:hover {
+  cursor: pointer;
+  opacity: 0.9;
+}
+
+ul.workouts li.workout {
+  background: rgba(0, 0, 0, 0.3);
+  border-radius: 0.5rem;
+  margin: 1rem 0;
+  padding: 2rem;
+  cursor: pointer;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+}
+
+.workout-running {
+  border-left: 0.5rem solid var(--running-color);
+}
+
+.workout-cycling {
+  border-left: 0.5rem solid var(--cycling-color);
+}
+
+ul.workouts li.workout .workout-title {
+  font-size: 1.5rem;
+  text-align: left;
+  grid-column: 1 / -1;
+}
+
+ul.workouts li.workout .workout-details {
+  display: flex;
+  align-items: baseline;
+  font-size: 1rem;
+  margin-right: 1rem;
+}
+
+ul.workouts li.workout .workout-details .workout-icon,
+ul.workouts li.workout .workout-details .workout-value {
+  padding-right: 0.2rem;
+}
+
+/*
+=========
+ Map
+=========
+*/
+
+section#map {
+  height: calc(100vh - 7rem);
+  flex: 1;
+}
+
+/* Popup width defined in JS */
+div.leaflet-popup-content-wrapper {
+  background: var(--background-color);
+  color: var(--font-color);
+  font: var(--font);
+  font-size: 1rem;
+  padding-right: 0.5rem;
+  border-radius: 0.5rem;
+}
+
+div.leaflet-popup-tip {
+  background: var(--background-color);
+}
+
+.running-popup div.leaflet-popup-content-wrapper {
+  border-left: 0.5rem solid var(--running-color);
+}
+
+.cycling-popup div.leaflet-popup-content-wrapper {
+  border-left: 0.5rem solid var(--cycling-color);
 }
 
 /*
@@ -79,8 +220,7 @@ main {
 
 nav {
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-  background: var(--background-color);
-  height: 3rem;
+  height: 2rem;
   align-items: center;
   padding: 1rem 0;
 }
@@ -99,6 +239,10 @@ nav li a:hover {
 header nav ul {
   display: flex;
   justify-content: flex-end;
+}
+
+header nav ul li a {
+  color: var(--background-color);
 }
 
 footer nav {
