--- a/00-assets/style.css
+++ b/00-assets/style.css
@@ -13,7 +13,7 @@ body {
     180deg,
     rgba(2, 0, 36, 1) 0%,
     rgba(22, 15, 108, 1) 40%,
-    rgba(111, 35, 143, 1) 100%
+    rgb(82, 11, 112) 100%
   );
   color: #ffd93d;
   line-height: 1.5;
