--- a/00-assets/style.css
+++ b/00-assets/style.css
@@ -30,24 +30,20 @@ a {
 }
 
 h1,
-h2,
 p {
   text-align: center;
   letter-spacing: 0.1rem;
   line-height: 1;
-  padding-bottom: 2rem;
 }
 
 h1 {
   font-size: 3rem;
-}
-
-h2 {
-  font-size: 2.5rem;
+  padding-bottom: 3rem;
 }
 
 p {
   font-size: 1.6rem;
+  padding: 0 2rem 5rem;
 }
 
 /*
@@ -63,7 +59,7 @@ main {
   justify-content: center;
   align-items: center;
   flex-grow: 1;
-  padding: 4.5rem 0;
+  padding: 10.5rem 0 4.5rem;
 }
 
 main section {
@@ -77,7 +73,7 @@ main .project-list {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(min(23rem, 100%), 1fr));
   grid-template-rows: repeat(auto-fill, minmax(min(20rem, 100%), 1fr));
-  grid-gap: 2rem;
+  grid-gap: 4rem 2.5rem;
 }
 
 main .project-item figure {
